--- a/armbian/userpatches/overlay/SBCC_Config.json
+++ b/armbian/userpatches/overlay/SBCC_Config.json
@@ -1,5 +1,1 @@
-{
-        "API_KEY": "1",
-        "SUBNET": "0.0.0.0",
-        "HTTP_Port": "80"
-}
+{"HTTP_Port":"8091","API_KEY":"81b69a27-60d4-SBCC9c5-88d6-132fe99e77a9","SUBNET":"0.0.0.0"}
